Mon Sep 01 16:27:15 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Update comment and exception
	  message not to talk about "consistent state", as that was to do
	  with the base files.

Mon Sep 01 14:57:02 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Explicitly include brass_defs.h.

Mon Sep 01 14:48:01 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Eliminate backends/brass/brass_types.h.

Fri Aug 29 21:06:22 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Fix checking a single brass table.

Thu Aug 28 16:04:59 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.cc,backends/chert/chert_check.cc,
	  bin/xapian-check.cc,include/xapian/constants.h: Rename
	  DBCHECK_SHOW_BITMAP to DBCHECK_SHOW_FREELIST.

Tue Aug 26 22:31:32 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 22 09:09:52 GMT 2014  Gaurav Arora <gauravarora.daiict@gmail.com>

	* api/,backends/brass/,backends/chert/,
	  backends/contiguousalldocspostlist.cc,
	  backends/contiguousalldocspostlist.h,backends/database.h,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_postlist.cc,backends/multi/multi_postlist.h,
	  backends/remote/,common/remoteprotocol.h,docs/sorting.rst,
	  include/xapian/database.h,include/xapian/postingiterator.h,
	  include/xapian/weight.h,matcher/,net/remoteserver.cc,
	  net/remoteserver.h,tests/,weight/: Provide the number of distinct
	  terms in the document to weighting schemes.  The current
	  implementation for the disk-based backends is a bit inefficient as
	  it has to look at the termlist table entry for the document.

Thu Aug 21 12:29:57 GMT 2014  Olly Betts <olly@survex.com>

	* weight/weight.cc: Add missing parameter to debug logging for
	  Weight::init_().

Tue Aug 19 14:25:39 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.h: Don't sync handles for tables which