@@ -655,7 +655,7 @@ Xapian::doccount
 BrassDatabase::get_doccount() const
 {
     LOGCALL(DB, Xapian::doccount, "BrassDatabase::get_doccount", NO_ARGS);
-    RETURN(record_table.get_doccount());
+    RETURN(stats.get_doccount());
 }
 
 Xapian::docid
@@ -676,12 +676,7 @@ Xapian::doclength
 BrassDatabase::get_avlength() const
 {
     LOGCALL(DB, Xapian::doclength, "BrassDatabase::get_avlength", NO_ARGS);
-    Xapian::doccount doccount = record_table.get_doccount();
-    if (doccount == 0) {
-	// Avoid dividing by zero when there are no documents.
-	RETURN(0);
-    }
-    RETURN(double(stats.get_total_doclen()) / doccount);
+    RETURN(stats.get_avlength());
 }
 
 Xapian::termcount
