@@ -112,6 +112,7 @@ check_brass_table(const char * tablename, const string &db_dir,
 		cursor->read_tag();
 		// Check format of the METAINFO key.
 		totlen_t total_doclen;
+		Xapian::doccount doccount;
 		Xapian::docid last_docid;
 		Xapian::termcount doclen_lbound;
 		Xapian::termcount doclen_ubound;
@@ -119,7 +120,11 @@ check_brass_table(const char * tablename, const string &db_dir,
 
 		const char * data = cursor->current_tag.data();
 		const char * end = data + cursor->current_tag.size();
-		if (!unpack_uint(&data, end, &last_docid)) {
+		if (!unpack_uint(&data, end, &doccount)) {
+		    if (out)
+			*out << "Tag containing meta information is corrupt (couldn't read doccount)." << endl;
+		    ++errors;
+		} else if (!unpack_uint(&data, end, &last_docid)) {
 		    if (out)
 			*out << "Tag containing meta information is corrupt (couldn't read last_docid)." << endl;
 		    ++errors;
